@@ -355,7 +355,7 @@ public class OPTParser {
                                 ccomplexobject, node.getAqlPathDto(), termDefinitionMap, localNameNode, node);
                         return node;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
             Optional<Name> explicitName = nameValues.stream().findAny();
@@ -438,15 +438,16 @@ public class OPTParser {
             List<WebTemplateNode> newChildren = new ArrayList<>();
             for (COBJECT cobject : cattribute.getChildrenArray()) {
 
-                if (cobject instanceof CPRIMITIVEOBJECT) {
-                    inputMap.put(
-                            cattribute.getRmAttributeName(), inputHandler.extractInput((CPRIMITIVEOBJECT) cobject));
+                if (cobject instanceof CPRIMITIVEOBJECT cprimitiveobject) {
+                    inputMap.put(cattribute.getRmAttributeName(), inputHandler.extractInput(cprimitiveobject));
                 } else {
                     List<WebTemplateNode> childNode =
                             parseCOBJECT(cobject, pathLoop, termDefinitionMap, cattribute.getRmAttributeName());
-                    if (childNode != null) {
-                        newChildren.addAll(childNode);
+
+                    if (cobject instanceof ARCHETYPESLOT) {
+                        childNode.forEach(c -> c.setArchetypeSlot(true));
                     }
+                    newChildren.addAll(childNode);
                 }
 
                 if (cattribute instanceof CSINGLEATTRIBUTE
@@ -464,7 +465,7 @@ public class OPTParser {
 
             List<WebTemplateNode> ismTransitionList = newChildren.stream()
                     .filter(n -> RmConstants.ISM_TRANSITION.equals(n.getRmType()))
-                    .collect(Collectors.toList());
+                    .toList();
             if (!ismTransitionList.isEmpty()) {
                 WebTemplateNode firstChild = ismTransitionList.get(0);
                 WebTemplateNode ismTransition = new WebTemplateNode();
@@ -679,7 +680,6 @@ public class OPTParser {
                 .filter(c -> c.getRmAttributeName().equals("name"))
                 .filter(c -> c.getChildrenArray().length == 1)
                 .map(c -> parseCOBJECT(c.getChildrenArray(0), aqlPath, termDefinitionMap, c.getRmAttributeName()))
-                .filter(Objects::nonNull)
                 .flatMap(List::stream)
                 .findAny();
     }
@@ -894,7 +894,7 @@ public class OPTParser {
                     MessageFormat.format("The supplied template is not supported: Unsupported type {0}.", "DV_SCALE"));
         }
 
-        return null;
+        return List.of();
     }
 
     /**
